[package]
name = "abeille-dorthographe"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
rocket = "0.5.1"
rocket_cors = "0.6.0"
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.132"
anyhow = "1.0.93"
sha3 = "0.11.0-pre.4"
base16ct = { version = "0.2.0", features = ["alloc", "std"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
